# axe

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  build.gradle  config.yml  main.go  package-lock.json  package.json  pom.xml  run.sh  upgrade.sh
dashboard/: package-lock.json  package.json
dashboard/public/: index.html  manifest.json
dashboard/src/: App.css  App.jsx  actions.js  ajax.js  index.js  main.css  main.jsx  reducers.js
db/: mapper.ini
db/migrations/: 20171010114357_create-locales.go  20171010114403_create-settings.go  20171010114409_create-nut-plugin.go  20171030110746_create-forum-plugin.go
desktop/: package-lock.json  package.json  server.js  store.js
desktop/components/: PageWithIntl.js
desktop/locales/: en-US.json
desktop/pages/: _document.js  index.js
locales/: en-US.ini  zh-Hans.ini
migrations/20171123011540_create-forum/: up.sql
plugins/forum/: c-articles.go  c-comments.go  c-html.go  c-tags.go  console.go  models.go  plugin.go
plugins/nut/: c-home.go  c-users.go  cache.go  console.go  context.go  dao.go  database.go  env.go  jwt.go  layout.go  layouts.go  main.go  middlewares.go  models.go  open.go  p-admin-cards.go  p-admin-friend-links.go  p-admin-leave-words.go  p-admin-links.go  p-admin-locales.go  p-admin-site.go  p-admin-users.go  (+17 more)
src/: lib.rs  main.rs
templates/: migration.go  nginx.conf
web/: cache.go  commands.go  constants.go  context.go  db.go  env.go  hash.go  health_check.go  i18n.go  jobber.go  jwt.go  main.go  open.go  plugin.go  router.go  security.go  settings.go  ueditor.go  wrap.go  wrapper.go
(+304 files in other folders)
