[package]
name = "axe"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A complete open source e-commerce solution by Rust."
homepage = "https://github.com/kapmahc/axe"

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
url = "1.6"
redis = "0.8"
clap = "2.27"
openssl = "0.9"
log = "0.3"
env_logger = "0.4"
rand = "0.3"
base64 = "0.8"
toml = "0.4"
time = "0.1"
mustache = "*"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# serde_yaml = "0.7"
# serde_xml = "1.0"
# serde_toml = "1.0"
# serde_yaml = "1.0"
dotenv = "0.10.*"
r2d2-diesel = "*"
r2d2 = "*"

[dependencies.diesel]
version = "0.16.0"
features = ["postgres"]

[dependencies.diesel_codegen]
version = "0.16.0"
features = ["postgres"]

[dependencies.postgres]
version = "0.15"
features = [
  "with-time",
  "with-uuid",
  "with-serde_json",
  "with-bit-vec",
  "with-eui48"
  ]

[dependencies.amqp]
version = "0.1"
default-features = false

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates"]
